# ivplasma

./: ProjectHome.md
plasma-am3rok/trunk/: CMakeLists.txt  ChangeLog  INSTALL  amarok_client.cpp  amarok_client.hpp  buttonwidget.cpp  buttonwidget.hpp  infodialog.cpp  infodialog.hpp  infodisplay.cpp  infodisplay.hpp  infowidget.cpp  infowidget.hpp  infowidgetplasma.cpp  infowidgetplasma.hpp  infowidgetqt.cpp  infowidgetqt.hpp  mmbuttonwidget.cpp  mmbuttonwidget.hpp  mminfodialog.cpp  mminfodialog.hpp  mminfodisplay.cpp  mminfodisplay.hpp  mminfodisplaywidgetplasma.cpp  mminfodisplaywidgetplasma.hpp  mminfodisplaywidgetqt.cpp  mminfodisplaywidgetqt.hpp  plasma-applet-am3rok.desktop
plasma-netgraph/trunk/: AUTHORS  CMakeLists.txt  ChangeLog  INSTALL
plasma-netgraph/trunk/applet/: CMakeLists.txt  blockgraph.cpp  blockgraph.hpp  conf.ui  netgraph.cpp  netgraph.hpp  netgraph_config.cpp  netgraph_config.hpp  plasma-applet-netgraph.desktop
plasma-netgraph/trunk/engine/: CMakeLists.txt  knetproc.cpp  knetproc.h  netspeed_engine.cpp  netspeed_engine.hpp  plasma-dataengine-networkspeed.desktop
toggle-compositing/trunk/: CMakeLists.txt  ChangeLog  INSTALL  README  confirmation_dialog.cpp  confirmation_dialog.hpp  plasma-applet-toggle_compositing.desktop  toggle_compositing.cpp  toggle_compositing.hpp
trunk/: AUTHORS  CMakeLists.txt
